--- a/home.html
+++ b/home.html
@@ -6,20 +6,22 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/responsive.css">
 </head>
 
 <body>
   <div class="container">
     <header class="header">
-      <div>
-        <button class="nav-toggle">
-          <span class="hamburger"></span>
-        </button>
-        <nav class="nav">
+      <nav class="nav">
+        <div class="nav-brand">Logo</div>
+        <a href="#" class="hamburger">
+          <span class="hamburger-bar"></span>
+          <span class="hamburger-bar"></span>
+          <span class="hamburger-bar"></span>
+        </a>
+        
+        <div class="nav-bar">
           <ul class="nav__list">
-            <li class="nav__item">
-              <a href="#" class="nav__link">Logo</a>
-            </li>
             <li class="nav__item">
               <a href="home.html" class="nav__link">Home</a>
             </li>
@@ -32,15 +34,15 @@
             <li class="nav__item">
               <a href="blog.html" class="nav__link">Blog</a>
             </li>
-            <li class=" nav__item">
-              <a href="#" class="nav__link nav__btn nav__link--btn">Log In</a>
+            <li class=" nav__item nav__btn">
+              <a href="#" class="nav__link nav__link--btn">Log In</a>
             </li>
-            <li class="nav__item">
-              <a href="#" class="nav__link nav__btn nav__link--btn--secondary">Sign Up</a>
-            </li>    
+            <li class="nav__item nav__btn">
+              <a href="#" class="nav__link nav__link--btn--secondary">Sign Up</a>
+            </li>
           </ul>
-        </nav>
-      </div>
+        </div>
+      </nav> 
     </header>
 
     <aside class="aside">
@@ -64,5 +66,6 @@
     <main class="main">CONTENT</main>
     <footer class="footer">FOOTER</footer>
   </div>
+  <script src="index.js"></script>
 </body>
 </html>
