Responsive side menu

--- a/home.html
+++ b/home.html
@@ -14,10 +14,10 @@
     <header class="header">
       <nav class="nav">
         <div class="nav-brand">Logo</div>
-        <a href="#" class="hamburger">
-          <span class="hamburger-bar"></span>
-          <span class="hamburger-bar"></span>
-          <span class="hamburger-bar"></span>
+        <a href="#" class="nav__hamburger">
+          <span class="nav__hamburger-bar"></span>
+          <span class="nav__hamburger-bar"></span>
+          <span class="nav__hamburger-bar"></span>
         </a>
         
         <div class="nav-bar">
@@ -47,20 +47,23 @@
 
     <aside class="aside">
       <div class="menu">
-        <ul class="menu__list">
-          <li class="menu__item">
-            <a href="#" class="menu__link">Menu Item</a>
-          </li>
-          <li class="menu__item">
-            <a href="#" class="menu__link">Menu Item</a>
-          </li>
-          <li class="menu__item">
-            <a href="#" class="menu__link">Menu Item</a>
-          </li>
-          <li class="menu__item">
-            <a href="#" class="menu__link">Menu Item</a>
-          </li>   
-        </ul>
+        <a class="menu-expand" href="#">Menu Expand</a>
+        <div class="menu__block">
+          <ul class="menu__list">
+            <li class="menu__item">
+              <a href="#" class="menu__link">Menu 1</a>
+            </li>
+            <li class="menu__item">
+              <a href="#" class="menu__link">Menu 2</a>
+            </li>
+            <li class="menu__item">
+              <a href="#" class="menu__link">Menu 3</a>
+            </li>
+            <li class="menu__item">
+              <a href="#" class="menu__link">Menu 4</a>
+            </li>   
+          </ul>
+        </div>
       </div>
     </aside>
     <main class="main">CONTENT</main>
