--- a/about.html
+++ b/about.html
@@ -1,39 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <title>About page</title>
+  <title>About</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/responsive.css">
 </head>
+
 <body>
+  <div class="container">
+    <header class="header">
+      <nav class="nav">
+        <div class="nav-brand">Logo</div>
+        <a href="#" class="nav__hamburger">
+          <span class="nav__hamburger-bar"></span>
+          <span class="nav__hamburger-bar"></span>
+          <span class="nav__hamburger-bar"></span>
+        </a>
+        
+        <div class="nav-bar">
+          <ul class="nav__list">
+            <li class="nav__item">
+              <a href="home.html" class="nav__link">Home</a>
+            </li>
+            <li class="nav__item">
+              <a href="albums.html" class="nav__link">Albums</a>
+            </li>
+            <li class="nav__item">
+              <a href="about.html" class="nav__link">About</a>
+            </li>
+            <li class="nav__item">
+              <a href="blog.html" class="nav__link">Blog</a>
+            </li>
+            <li class=" nav__item nav__btn">
+              <a href="#" class="nav__link nav__link--btn">Log In</a>
+            </li>
+            <li class="nav__item nav__btn">
+              <a href="#" class="nav__link nav__link--btn--secondary">Sign Up</a>
+            </li>
+          </ul>
+        </div>
+      </nav> 
+    </header>
 
-<nav>
-  <a href="#">Logo</a>
-  <button>
-    <span></span>
-  </button>
-  <div>
-    <ul>
-      <li>
-        <a href="home.html">Home</a>
-      </li>
-      <li >
-        <a href="albums.html">Albums</a>
-      </li>
-      <li >
-        <a href="about.html">About</a>
-      </li>
-      <li >
-        <a href="blog.html">Blog</a>
-      </li>    
-    </ul>
-  </div>  
-</nav>
-
-
-
+    <aside class="aside">
+      <div class="menu">
+        <a class="menu-expand" href="#">Menu Expand</a>
+        <div class="menu__block">
+          <ul class="menu__list">
+            <li class="menu__item">
+              <a href="#" class="menu__link">Menu 1</a>
+            </li>
+            <li class="menu__item">
+              <a href="#" class="menu__link">Menu 2</a>
+            </li>
+            <li class="menu__item">
+              <a href="#" class="menu__link">Menu 3</a>
+            </li>
+            <li class="menu__item">
+              <a href="#" class="menu__link">Menu 4</a>
+            </li>   
+          </ul>
+        </div>
+      </div>
+    </aside>
+    <main class="main">CONTENT</main>
+    <footer class="footer">FOOTER</footer>
+  </div>
+  <script src="index.js"></script>
 </body>
-<footer>
-  
-</footer>
 </html>
