Add content to about page

--- a/blog.html
+++ b/blog.html
@@ -32,7 +32,7 @@
               <a href="about.html" class="nav__link">About</a>
             </li>
             <li class="nav__item">
-              <a href="blog.html" class="nav__link">Blog</a>
+              <a href="blog.html" class="nav__link current">Blog</a>
             </li>
             <li class=" nav__item nav__btn">
               <a href="#" class="nav__link nav__link--btn">Log In</a>
