--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
               <a href="albums.html" class="nav__link">Albums</a>
             </li>
             <li class="nav__item">
-              <a href="about.html" class="nav__link">About</a>
+              <a href="about.html" class="nav__link current">About</a>
             </li>
             <li class="nav__item">
               <a href="blog.html" class="nav__link">Blog</a>
@@ -66,7 +66,40 @@
         </div>
       </div>
     </aside>
-    <main class="main">CONTENT</main>
+    <main class="main">
+      <h1 class="group-name">Nhóm 1412316 - 1412274</h1>
+      <div class="row">
+        <div class="column">
+          <div class="card">
+            <img class="card__img" src="images/student1.jpg" alt="Jane" width="400" height="400">
+            <div class="card__container">
+              <h2 class="card__name">Đặng Nhật Minh</h2>
+              <p>Student ID: 1412316</p>
+              <p>Email: nhatminhdang1996@gmail.com</p>
+              <p><button class="card__button">Contact</button></p>
+            </div>
+          </div>
+        </div>
+    
+        <div class="column">
+          <div class="card">
+            <img class="card__img" src="images/student2.jpg" alt="Mike" width="400" height="400">
+            <div class="card__container">
+              <h2 class="title">Nguyễn Hoàng Kim</h2>
+              <p>Student ID: 1412274</p>
+              <p>Email: 1412274@student.hcmus.edu.vn</p>
+              <p><button class="card__button">Contact</button></p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <h1>Địa chỉ liên lạc nhóm</h1>
+      <div class="map">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3918.9346700386814!2d106.71883221474931!3d10.816311592294467!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3175289dcd156c31%3A0x6790966b4c983637!2zQ2jhu6MgVGhhbmggxJBh!5e0!3m2!1svi!2s!4v1589425169908!5m2!1svi!2s" width="1000" height="500" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0">
+        </iframe>
+      </div>
+    </main>
     <footer class="footer">FOOTER</footer>
   </div>
   <script src="index.js"></script>
