--- a/albums.html
+++ b/albums.html
@@ -26,7 +26,7 @@
               <a href="home.html" class="nav__link">Home</a>
             </li>
             <li class="nav__item">
-              <a href="albums.html" class="nav__link">Albums</a>
+              <a href="albums.html" class="nav__link current">Albums</a>
             </li>
             <li class="nav__item">
               <a href="about.html" class="nav__link">About</a>
