--- a/home.html
+++ b/home.html
@@ -23,7 +23,7 @@
         <div class="nav-bar">
           <ul class="nav__list">
             <li class="nav__item">
-              <a href="home.html" class="nav__link">Home</a>
+              <a href="home.html" class="nav__link current">Home</a>
             </li>
             <li class="nav__item">
               <a href="albums.html" class="nav__link">Albums</a>
